Completed HELL YEAH!!

--- a/html&css&js/style.css
+++ b/html&css&js/style.css
@@ -117,10 +117,16 @@ a:hover {
     font-weight: bold;
     font-family:'Roboto', sans-serif;
 }
+.desc-container {
+    display: flex;
+    justify-content: center;
+}
 .desc-container p {
     font-size:1rem;
     color:rgb(145, 145, 145);
     padding-bottom:3em;
+    margin:0.5em;
+    text-align: left;
 }
 
 @media screen and (min-width:1300px) {
@@ -162,6 +168,7 @@ a:hover {
 }
 .icon-desc {
     margin-top:1em;
+    margin-left:0.25em;
     font-size:1.2rem;
     color:rgb(145, 145, 145);
 }
@@ -214,10 +221,10 @@ a:hover {
         color:rgb(145, 145, 145);
     }
     .icon .gps {
-        font-size:1.2rem;
+        font-size:1rem;
     }
     .desc-container p {
-        font-size:1.3rem;
+        font-size:1rem;
     }
     .container .title {
         font-size:2rem;
@@ -231,25 +238,12 @@ a:hover {
     }
 }
 @media screen and (max-width:605px) {
-    .container .title {
-        font-size: 2rem;
-    }
-    .desc-container {
-        display: flex;
-        justify-content: center;
-    }
-    .desc-container p {
-        width:75%;
-    }
-    .icon {
-        margin-top:0;
-    }
-    .icon p {
-        font-size: 2rem;
-    }
-    .icon-desc {
-        font-size:1.3rem;
-    }
+
+.icon p {
+    padding-top:0.5em;
+    font-size:2.5rem;
+}
+
 }
 
 /* Download the app */
@@ -318,7 +312,7 @@ a:hover {
 }
 @media screen and (max-width:605px) {
     .mobile-title p {
-        font-size:2rem;
+        font-size:2.9rem;
         width:80%;
         margin-top:1rem;
     }
@@ -329,3 +323,179 @@ a:hover {
     }
 }
 
+.menu {
+    margin-top:1.5em;
+    height: 100%;
+    color:black;
+}
+.title-menu {
+    text-align: center;
+    font-size:5rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+.title-menu-desc {
+    text-align: center;
+    font-size:1.5rem;
+    color:gray;
+    margin-top:0.5em;
+}
+
+@media screen and (max-width:770px) {
+    .title-menu {
+        font-size: 3.5rem;
+    }
+}
+@media screen and (max-width:605px) {
+    .title-menu {
+        font-size:2.9rem;
+    }
+}
+.food-container {
+    display: flex;
+    justify-content:center;
+    flex-flow: row wrap;
+}
+
+.menu .food {
+    margin:0.5em;
+    width:350px;
+}
+.menu .food-img {
+    height:270px;
+    width:100%;
+}
+.food-imgs {
+    height:100%;
+    width:100%;
+}
+.food-desc {
+    background-color: white;
+    box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.2);
+    font-size: 2rem;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-bottom: 0.2em;
+}
+.food-desc p {
+    padding:0.5em;
+    padding-bottom:0;
+}
+.food-desc .p2 {
+    font-size:1rem;
+    margin:0;
+    color:gray;
+}
+.food-detail {
+    color:black;
+    font-size:1.2rem;
+    font-family: 'Roboto';
+    font-weight: bold;
+    text-decoration: underline;
+}
+.food-detail:hover {
+    color:gray;
+}
+.hire {
+    margin-top:3rem;
+    display: flex;
+    justify-content: center;
+}
+.hire-box {
+    margin:1em;
+    height:100%;
+    width:800px;
+    border: 2px lightgray solid;
+    border-radius: 1em;
+    text-align: center;
+    color:black;
+}
+.hire-title {
+    margin-top:0.5em;
+    font-size:4rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.hire-desc {
+    display: inline-flex;
+    margin-top: 0.5em;
+}
+.hire-desc {
+    width:80%;
+    text-align: left;
+    font-size: 1.3rem;
+    color:rgb(0, 0, 0);
+}
+
+.hire-gray {
+    margin-top:0.5em;
+    color:gray;
+    font-size:1.3rem;
+}
+.hire-btn {
+    margin:1rem 0;
+}
+.apply {
+    font-size:1.5rem;
+    padding: 0.2rem 1rem;
+    cursor: pointer;
+    border: black solid 2px;
+    border-radius: 0.5em;
+}
+.apply:hover {
+    background-color: lightblue;
+}
+@media screen and (max-width:803px) {
+    .hire-btn {
+        margin-top:0.5rem;
+    }
+}
+@media screen and (max-width:620px) {
+    .hire-title {
+        font-size:2.5rem;
+    }
+    .hire-desc {
+        font-size: 1rem;
+    }
+    .hire-gray {
+        font-size:1.2rem;
+    }
+}
+
+.footer {
+    margin-top:2em;
+    height:5rem;
+    text-align: center;
+    color:black;
+}
+.footer p {
+    font-size:1.8rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+.footer-links {
+    display:flex;
+    margin-top:1em;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap:20px;
+    padding-bottom: 1em;
+}
+.footer-links a {
+    color:black;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    text-decoration: underline;
+}
+@media screen and (max-width:525px) {
+    .footer p {
+        font-size: 1.3rem;
+    }
+    .footer-links a {
+        font-size:1rem;
+    }
+}
